model factory, view and controller split out

--- a/index.html
+++ b/index.html
@@ -69,7 +69,9 @@
                         </div>
             </div>
             <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular.min.js "></script>
-            <script src='angular.js'></script>
+            <script src='main.js'></script>
+            <script src='factories/factory.js'></script>
+            <script src='controllers/controller.js'></script>
 </body>
 
 </html>
